--- a/containers/mongodb/etc/mongod.conf
+++ b/containers/mongodb/etc/mongod.conf
@@ -26,6 +26,8 @@ processManagement:
   timeZoneInfo: /usr/share/zoneinfo
 
 #security:
+security:
+  authorization: enabled
 
 #operationProfiling:
 
